@@ -4,7 +4,7 @@ use Test::More;
 
 BEGIN {
     plan skip_all => 'backends required' if(!-s 'thruk_local.conf' and !defined $ENV{'CATALYST_SERVER'});
-    plan tests => 92;
+    plan tests => 119;
 }
 
 BEGIN {
@@ -14,6 +14,8 @@ BEGIN {
 }
 BEGIN { use_ok 'Thruk::Controller::showlog' }
 
+my($host,$service) = TestUtils::get_test_service();
+
 my $pages = [
     '/thruk/cgi-bin/showlog.cgi',
     '/thruk/cgi-bin/showlog.cgi?archive=-1',
@@ -22,6 +24,8 @@ my $pages = [
     '/thruk/cgi-bin/showlog.cgi?start=2010-03-02+00%3A00%3A00&end=2010-03-03+00%3A00%3A00&oldestfirst=on',
     '/thruk/cgi-bin/showlog.cgi?entries=100&pattern=test&exclude_pattern=&start=2013-03-05+00%3A00&end=2013-03-06+00%3A00&archive=',
     '/thruk/cgi-bin/showlog.cgi?entries=100&pattern=test&exclude_pattern=blub&start=2013-03-05+00%3A00&end=2013-03-06+00%3A00&archive=',
+    '/thruk/cgi-bin/showlog.cgi?host='.$host,
+    '/thruk/cgi-bin/showlog.cgi?host='.$host.'&service='.$service,
 ];
 
 for my $url (@{$pages}) {
