@@ -4,6 +4,8 @@
 
 <form action="showlog.cgi" method="GET" id="date_form">
   <input type="hidden" name="entries" value="[% entries_per_page %]">
+  <input type="hidden" name="host" value="[% host %]">
+  <input type="hidden" name="service" value="[% service %]">
   <table border="0" width="100%" cellpadding="0" cellspacing="0">
     <tr>
       <td align="left" valign="top" width="33%">
@@ -52,6 +54,12 @@
             </td>
           </tr>
         </table>
+        [% IF host %]
+          <br><br><br><br>
+          <div align="center" class='statusTitle'>
+            Log File Entries for [% host %][% IF service %] - [% service %][% END %]
+          </div>
+        [% END %]
       </td>
       <td align="right" valign="top" width="33%">
           <table border="0" cellspacing="0" cellpadding="0" class='optBox'>
